--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A Light Weighted Appliction for Padmasri B.V Raju Institute of Tech
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0
+version: 2.1.0+5
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -24,7 +24,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1
-  scoped_model: ^1.0.1
   firebase_auth: ^0.11.1+1
   google_sign_in:
   shared_preferences:
